create a responsive css file

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     src="https://kit.fontawesome.com/c0cf789da4.js" crossorigin="anonymous">
     </script>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="responsive.css">
 </head>
 <body>
     <!-- Header Section start -->
