added newsletter section

--- a/index.html
+++ b/index.html
@@ -337,6 +337,13 @@
             </div>
             <div class="newsletter-image">
                 <img src="./assets/Images/Rectangle 8 (1).png" alt="">
+                <div class="newsletter-image-overlay">
+                    <button class="newsletter-image-overlay-btn">
+                    <span>Travel.com</span> <br>
+                    <h3>Save up to 70%</h3>
+                    </button>
+                    
+                </div>
             </div>
         </section>
         <!-- Newsletter Section ends here -->
